# ComputerVision

./: .gitignore  2-Detection.ipynb  2-DetectionPointsInteret.ipynb  README.md  main.py  pyproject.toml  shell.nix
eagle/: estimator.py  io.py  stitch.py  utils.py
eagle/gaussian/: filter.py  function.py
eagle/points/: detector.py  response.py
eagle/points/descriptor/: differential.py  distance.py  lbp.py
examples/: corresponding-v2.ipynb  corresponding.ipynb  detectors.ipynb  homography.ipynb  image_derivation.ipynb  tests.ipynb
