[tool.poetry]
name = "eagle"
version = "0.1.0"
description = ""
authors = ["Nathan Graule <solarliner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
scipy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
tqdm = "^4.65.0"
jupyter = "^1.0.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
